小程序上线

--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
   ],
   "window": {
     "navigationBarBackgroundColor": "#BAD7DF",
-    "navigationBarTitleText": "Happyhapi",
+    "navigationBarTitleText": "HapStudy",
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
